Added Mouse Handler

--- a/drtx2/drtx2.vcxproj
+++ b/drtx2/drtx2.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="ExceptionHandler.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="WindowsMessageMap.cpp" />
   </ItemGroup>
@@ -169,6 +170,7 @@
     <ClInclude Include="DIHeader.h" />
     <ClInclude Include="ExceptionHandler.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Mouse.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowsMessageMap.h" />
